infraestructura/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: franchise
  labels:
    name: franchise
